Card model changes. Card model changes implementation changes on create/update & aggregation. Minor name changes. Swagger updated.
