# responses/card.go
@@ -3,6 +3,9 @@ package responses
 type CardStatistics struct {
 	Currency            string  `bson:"currency" json:"currency"`
 	CardName            string  `bson:"card_name" json:"card_name"`
+	CardHolder          string  `bson:"card_holder" json:"card_holder"`
+	Color               string  `bson:"color" json:"color"`
+	Type                string  `bson:"type" json:"type"`
 	CardLastDigit       string  `bson:"card_last_digit" json:"card_last_digit"`
 	MEName              string  `bson:"most_expensive_name" json:"most_expensive_name"`
 	ME                  float64 `bson:"most_expensive" json:"most_expensive"`
